fix: Improve signal parameter resolution in CNVParser; handle explicit parameters and emitted signal arguments correctly